0.14-SNAPSHOT
====

* #18: PeriodicalLog logging is now both readable and settable through
  JMX.
  
* #19: Support for Statsd

* PeriodicalLog can now also calculate any percentile you want.  By
  default it uses 95th, but you can set it with something like this
  
  speed4j.<mylogger>.percentiles = 99, 99.9, 99.99

  See README for more information
  
0.13
====

* #12: Added space between message and time.

* #14: New FormattedStopWatch class to provide machine-readable StopWatches

* API now prefers microseconds all around

* Allows setting of the property file from the command line using
  -Dspeed4j.properties=myfile.properties

* #13: PeriodicalLog now allows explicit mode settings, JMX_ONLY, LOG_ONLY,
  QUIET or ALL.

* Improved output of PeriodicalLog to handle longer tags.

0.12
====

* Speed4j core now requires only Java 5.  Added note about PeriodicalLog requiring
  Java6.  Thanks to Brad Fitz!

* Documentation fixes, again thanks to Brad!

0.11
====

* Improved Perf4j compatibility by adding StopWatch.getElapsedTime()

0.10
====

* Much improved memory management: The StopWatch queue size has now a maximum limit
  (to prevent a case where a producer would just keep sending stuff that we couldn't
  process fast enough).  Also, the StopWatch queues are now emptied as quickly
  as possible.

* Added new internal JMX attribute: "DroppedStopWatches" to monitor StopWatches
  which are dropped when they can't fit in the queue.

* There's another new internal JMX attribute: "StopWatchQueueLength" which you
  can use to directly monitor whether Speed4j is keeping up with the incoming
  events.

* You can now shut up the PeriodicalLog logging by simply setting the slf4jLogName
  to an empty string.

* PeriodicalLog now requires Java 6 for j.u.c.LinkedBlockingDeque.  Speed4j can
  only be used on Java 5 VM if PeriodicalLog is not used.

0.9
===

* Fixed NPE when the tag didn't get any data. (Fixes #5 and #6).

0.8
===
